# system-admin-mcp

./: .assess-fix-timestamp  .cursorrules  .env.example  .gitignore  .mcpbignore  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CURSOR_SETUP.md  Cargo.toml  INSTALL.md  README.md  build.ps1  coverage.xml  cursor_mcp_config_example.json  dxt_build.py  dxt_manifest.json  extension.toml  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  mcpb.json  mcpb_build.py  pyproject.toml  pytest.ini  requirements-dev.txt  restart.bat  start.ps1  start.ps1.bak.20260508_202256  stop.bat  test.ps1
.github/workflows/: ci.yml  ci.yml.20260701_030330.bak
.windsurf/rules/global_rules/: rules1.md
_llm_test_scripts/: debug_mcp.py  test_diagnostics.py
assets/prompts/: system.md  system_diagnostics.md  troubleshooting.md  volume_maintenance.md
docs/: quickstart.md  repository-analysis-2025-10-25.md
docs/adn-notes/: SEP-1577-in-System-Admin-MCP-Agentic-System-Administration.md
docs/api/: README.md
docs/development/: README.md
docs/mcpb-packaging/: README.md
installer/: SystemAdminMCP.wxs
mcpb/: manifest.json
mcpb/assets/prompts/: examples.json  file_recovery.md  security_management.md  system.md  user.md
mcpb/server/: __main__.py  server.py
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs  main.rs
native/windows/: hooks.nsh
scripts/: cua-nsis-config.json  disable_bridge.ps1  fix-standards.ps1  install-mcp-clients.ps1  uninstall.ps1
skills/system-admin-expert/: SKILL.md
src/: lib.rs
src/system_admin_mcp/: __init__.py  __init___20260409_153024.py.bak  __main__.py  app.py  app_20260409_152645.py.bak  main.py  main_20260409_152847.py.bak  prompts.py  server.py  transport.py
src/system_admin_mcp/elevated_service/: __init__.py  file_ops.py  service.py  volume_ops.py
src/system_admin_mcp/elevated_service/tools/: __init__.py
src/system_admin_mcp/tools/: __init__.py  agentic_system_workflow.py  agentic_system_workflow_20260409_152830.py.bak  implementations.py  monitoring.py  portmanteau.py  services_and_tasks.py  services_and_tasks_20260426_045720.py.bak  services_and_tasks_20260426_045722.py.bak  services_and_tasks_20260426_045726.py.bak  services_and_tasks_20260426_045728.py.bak  services_and_tasks_20260426_045731.py.bak  services_and_tasks_20260426_045733.py.bak  services_and_tasks_20260426_045736.py.bak  services_and_tasks_20260426_045739.py.bak  system_ops.py
src/system_admin_mcp/tools/prefab/: __init__.py  system_cards.py
src/system_admin_mcp/user_bridge/: __init__.py  bridge.py
tests/: README.md  __init__.py  conftest.py  test_e2e.py  test_edge_cases.py  test_implementations.py  test_integration.py  test_portmanteau.py  test_portmanteau_helper.py  test_system_ops.py
web_sota/: README.md  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  stop.ps1  tsconfig.app.json  vite.config.ts
web_sota/backend/: log_buffer.py  server.py  start.ps1
web_sota/backend/routes/: logging.py
web_sota/e2e/: smoke.spec.ts
web_sota/src/: App.tsx  index.css
web_sota/src/common/: apps-catalog.ts  export.ts
web_sota/src/components/layout/: app-layout.tsx  sidebar.tsx  topbar.tsx
web_sota/src/components/ui/: badge.tsx  button.tsx  card.tsx  label.tsx  progress.tsx  scroll-area.tsx  select.tsx  switch.tsx  tabs.tsx
web_sota/src/pages/: apps.tsx  chat.tsx  dashboard.tsx  elevated.tsx  file-owner.tsx  file-recovery.tsx  help.tsx  logs.tsx  processes.tsx  services.tsx  settings.tsx  settings.tsx.20260618_151553.bak  status.tsx  status.tsx.20260618_151553.bak  tools.tsx  tools.tsx.20260618_151553.bak  volumes.tsx  volumes.tsx.20260618_151553.bak
