[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-admin-mcp"
version = "0.2.0"
description = "System Admin MCP for elevated system operations"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "fastmcp[tasks]>=3.2.0,<4",
    "pywin32>=300; platform_system=='Windows'",
    "psutil>=5.9.0",
    "wmi>=1.5.1; platform_system=='Windows'",
    "ruff>=0.15.2",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
system-admin-mcp = "system_admin_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["system_admin_mcp*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "C90", "I", "N", "UP", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLO", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["ANN101", "ANN102", "D100", "D104", "S101", "G004", "PLR0913", "TRY003", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "PLR", "TRY", "S105", "S106", "SLF001", "ARG002", "PLC0415"]
"server.py" = ["T20", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
