[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-admin-mcp"
version = "0.2.0"
description = "System Admin MCP for elevated system operations"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "fastmcp[tasks]>=3.2.0,<4",
    "pywin32>=300; platform_system=='Windows'",
    "psutil>=5.9.0",
    "wmi>=1.5.1; platform_system=='Windows'",
    "ruff>=0.15.2",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
system-admin-mcp = "system_admin_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["system_admin_mcp*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
